--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                08/05 
+                15/05 
               </a>
             </h3>
             <p>
@@ -57,7 +57,7 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> ASSADO DE PANELA </li> -->
-              <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA </li> -->
@@ -71,6 +71,7 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <li> FILE DE FRANGO ASSADO </li>
               <!-- <li> FIGADO ACEBOLADO</li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
@@ -83,7 +84,7 @@
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> O </li> -->
               <!-- <li> ISCA DE FRANGO-->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> ROUPA VELHA </li> -->
@@ -91,7 +92,7 @@
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
@@ -107,7 +108,7 @@
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
-              <li> CUSCUZ COM CAFE E LEITE </li>
+              <!-- <li> CUSCUZ COM CAFE E LEITE </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
@@ -115,7 +116,7 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> PIZZA </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
@@ -131,7 +132,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- TERÇA -->
-                09/05
+                16/05
 
               </a>
             </h3>
@@ -151,7 +152,8 @@
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <li> SALSICHA AO MOLHO </li>
+              <li> QUEIJO </li>
+              <!-- <li> SALSICHA AO MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
@@ -160,7 +162,7 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
@@ -178,7 +180,7 @@
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -187,13 +189,13 @@
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PIRARUCU FRITO </li> -->
               <!-- <li> PIRARUCU MILANESA </li> -->
               <!-- <li> PICADINHO </li> -->
-              <li> PICADINHO RICO </li>
+              <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -204,7 +206,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
+              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -212,7 +214,7 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> PASTEL </li> -->
@@ -232,7 +234,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                10/05
+                17/05
 
               </a>
             </h3>
@@ -251,10 +253,10 @@
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
-              <li> PATÊ DE SARDINHA </li>
+              <!-- <li> PATÊ DE SARDINHA </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SOPA </li> -->
@@ -269,7 +271,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -280,7 +282,7 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO A DORE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
@@ -294,10 +296,11 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> LINGUIÇA ASSADA DE FORNO </li>
+              <!-- <li> LINGUIÇA ASSADA DE FORNO </li> -->
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
+              <li> PANQUECA </li>
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -317,7 +320,7 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
@@ -327,6 +330,7 @@
               <!-- <li> SALGADO </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
+              <li> MINGAU DE MUNGUNZÁ </li>
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
               <!-- <li>SALADA FRUTA</li> -->
@@ -342,7 +346,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                11/05
+                18/05
 
               </a>
             </h3>
@@ -353,8 +357,8 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BATATA DOCE </li>
-              <!-- <li> BOLO </li> -->
+              <!-- <li> BATATA DOCE </li> -->
+              <li> BOLO </li>
               <!-- <li> FRUTAS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRUTAS </li> -->
@@ -377,9 +381,9 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> ALMONDEGAS AO MOLHO </li> -->
-              <li> BIFE ACEBOLADO </li>
+              <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -389,7 +393,7 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO</li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
@@ -397,13 +401,13 @@
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> HAMBURGER </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> ISCA DE CALABRESA </li>
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> LINGUA AO MOLHO </li>
+              <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -429,7 +433,7 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MILHO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
@@ -439,7 +443,7 @@
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO</li> -->
-              <!-- <li> X SALADA </li> -->
+              <li> X SALADA </li>
               <!-- <li> SALADA DE FRUTA </li> -->
             </ul>
             </p>
@@ -453,7 +457,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                12/05
+                19/05
 
               </a>
             </h3>
@@ -473,9 +477,9 @@
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> TAPIOCA COM QUEIJO </li> -->
+              <li> TAPIOCA COM QUEIJO </li>
 
               <!-- <li> FAROFA DE CONSERVA </li> -->
 
@@ -495,7 +499,7 @@
               <!-- <li> CHURRASCO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
-              <li> ESCONDIDINHO DE FRANGO </li>
+              <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
@@ -511,7 +515,7 @@
               <!-- <li> ISCA DE CARNE COM FRITAS</li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
-              <!-- <li> LASANHA </li> -->
+              <li> LASANHA </li>
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -556,7 +560,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                13/05
+                20/05
 
               </a>
             </h3>
@@ -597,14 +601,14 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
-              <!-- <li> FAROFA DE CONSERVA </li> -->
+              <li> FAROFA DE CONSERVA </li>
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
-              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -614,7 +618,7 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
+              <li> PEIXE FRITO </li>
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PEITO DE FRANCO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -657,7 +661,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                14/05
+                21/05
 
               </a>
             </h3>
@@ -668,7 +672,7 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
@@ -677,7 +681,7 @@
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <!-- <li> QUEIJO </li> -->
+              <li> QUEIJO </li>
               <!-- <li> SALSICHA COM MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
@@ -691,7 +695,8 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE GUISADA COM BATATAS </li>
+              <!-- <li> CARNE GUISADA COM BATATAS </li> -->
+              <li> CARNE GUISADA </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -711,8 +716,8 @@
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> OVO FRITO </li>
+              <li> LINGUIÇA DE FRANGO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECA </li> -->
               <!-- <li> PANQUECA DE CARNE </li> -->
@@ -737,6 +742,7 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM QUEIJO E PRESUNTO</li>
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
