--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <li> TAPIOCA E CAFE COM LEITE </li>
+              <!-- <li> TAPIOCA E CAFE COM LEITE </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
