--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
-              <li> ISCA DE FRANGO </li>
-              <!-- <li> ISCA DE FIGADO </li> -->
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
