--- a/index.html
+++ b/index.html
@@ -445,7 +445,8 @@
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <li> TAPIOCA COM QUEIJO</li>
+              <!-- <li> TAPIOCA COM QUEIJO</li> -->
+              <li> TAPIOCA </li>
               <!-- <li> X SALADA </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
             </ul>
