--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                29/05 
+                12/06 
               </a>
             </h3>
             <p>
@@ -64,17 +64,18 @@
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
               <!-- <li> COSTELA ASSADA DE FORNO </li> -->
+              <li> COSTELA AO MOLHO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> FEIJOADA </li> -->
-              <!-- <li> FILE DE FRANGO </li> -->
+              <li> FILE DE FRANGO </li>
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO ASSADO </li> -->
               <!-- <li> FIGADO ACEBOLADO</li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -84,7 +85,7 @@
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> O </li> -->
               <!-- <li> ISCA DE FRANGO-->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> ROUPA VELHA </li> -->
@@ -133,7 +134,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- TERÇA -->
-                30/05
+                13/06
 
               </a>
             </h3>
@@ -171,7 +172,7 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
-              <li> COZIDÃO MANAUARA </li>
+              <!-- <li> COZIDÃO MANAUARA </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -183,9 +184,9 @@
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO COM BATATAS</li>
               <!-- <li> GUISADO DE CARNE </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> ISCA DE CALABRESA </li>
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -193,7 +194,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> OMELETE </li>
+              <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PIRARUCU FRITO </li> -->
@@ -211,7 +212,7 @@
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
-              <li> BAQUETE </li>
+              <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
@@ -224,7 +225,7 @@
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
+              <li> MINGAU DE MUNGUNZÁ </li>
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -238,7 +239,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                31/05
+                14/06
 
               </a>
             </h3>
@@ -250,7 +251,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> FRUTA </li>
+              <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MACAXEIRA COZIDA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
@@ -263,6 +264,7 @@
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
+              <li> SALSICHA AO MOLHO </li>
               <!-- <li> SOPA </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
@@ -287,9 +289,9 @@
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
-              <li> FRANGO A DORE </li>
+              <!-- <li> FRANGO A DORE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
@@ -307,9 +309,9 @@
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PANQUECA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> REFRIGERANTE </li> -->
-              <li> SUÍNO </li>
+              <!-- <li> SUÍNO </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
               <!-- <li> MACARRONADA </li> -->
@@ -323,14 +325,13 @@
             <ul>
               <!-- <li> AÇAÍ FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
-              <li> ABACATADA COM BOLACHA </li>
+              <!-- <li> ABACATADA COM BOLACHA </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -338,9 +339,10 @@
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
-              <!-- <li>SALADA FRUTA</li> -->
+              <!-- <li> SALADA FRUTA </li> -->
             </ul>
             </p>
           </div>
@@ -353,7 +355,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                01/06
+                15/06
 
               </a>
             </h3>
@@ -365,7 +367,7 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BATATA DOCE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FRUTAS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRUTAS </li> -->
@@ -376,7 +378,7 @@
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <li> SALSICHA AO MOLHO </li>
+              <!-- <li> SALSICHA AO MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
               <!-- <li> MACAXEIRA COZIDA </li> -->
@@ -391,7 +393,8 @@
               <!-- <li> ALMONDEGAS AO MOLHO </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE GUISADA </li>
               <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
@@ -403,7 +406,7 @@
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO</li> -->
-              <li> FRANGO DESFIADO COM LEGUMES</li>
+              <!-- <li> FRANGO DESFIADO COM LEGUMES</li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
@@ -414,6 +417,7 @@
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
+              <li> LASANHA DE FRANGO </li>
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -435,7 +439,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
+              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -448,7 +452,7 @@
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MINGAU </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <li> PÃO COM QUEIJO QUENTE</li>
+              <!-- <li> PÃO COM QUEIJO QUENTE</li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
@@ -468,7 +472,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                02/06
+                16/06
 
               </a>
             </h3>
@@ -500,7 +504,7 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> ASSADO DE PANELA </li>
+              <!-- <li> ASSADO DE PANELA </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
@@ -513,11 +517,11 @@
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE FRANGO </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <!-- <li> FEIJOADA </li> -->
+              <li> FEIJOADA </li>
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -537,7 +541,7 @@
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PIRARUCU A CASACA </li> -->
               <!-- <li> RODIZIO DE MASSAS </li> -->
-              <li> STROGONOFF DE FRANCO </li>
+              <!-- <li> STROGONOFF DE FRANCO </li> -->
               <!-- <li> YAKISOBA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -574,7 +578,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                03/06
+                17/06
 
               </a>
             </h3>
@@ -608,8 +612,8 @@
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> BISTECA SUÍNA </li>
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <!-- <li> BISTECA SUÍNA </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -622,7 +626,7 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -632,7 +636,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <!-- <li> OMELETE  </li> -->
+              <li> OMELETE  </li>
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -655,9 +659,9 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM OVO E QUEIJO </li>
               <!-- <li> PÃO COM QUEIJO </li> -->
               <!-- <li> PÃO COM OVO </li> -->
               <!-- <li> PASTEL </li> -->
@@ -678,7 +682,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                04/06
+                18/06
 
               </a>
             </h3>
@@ -715,7 +719,7 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA COM BATATAS </li> -->
               <!-- <li> CARNE GUISADA </li> -->
-              <li> CARNE CPM LEGUMES </li>
+              <!-- <li> CARNE CPM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -723,14 +727,15 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO </li> -->
+              <li> FIGADO ACEBOLADO </li>
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
-              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
